--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <body>
     <h1> Coming soon...<h1/>
-       Sound on- "never too late" 
-      o__o
+      <span>Sound on- "never too late"</span> <br>
+      <span>o__o</span>
       
   </body>
 </html>
